aligning layout with nav and fixing crumbs

--- a/layout.css
+++ b/layout.css
@@ -305,5 +305,18 @@ input[type=text]{
 
 .checkout{
     padding-top: 10%;
+    width: 100%;
+}
+
+.divide{
+    width: 100%;
+    padding: 1% 18%;
+}
+
+.crumbs{
+    display: flex;
+    flex-direction:row;
+    align-items: center;
+    padding: 1%;
 }
 
